[java-11] Updated code to comply with Java 9+ features. Updated POM and README